<resources>
    <string name="app_name">Заметки</string>
    <string name="app_savePinSuccess">Пароль успешно сохранен</string>
    <string name="app_savePinDontSuccess">Пароль не сохранен</string>
    <string name="app_pinTextView">Введите новый пароль:</string>
    <string name="app_pinButton">Сохранить</string>
    <string name="app_enterPinTextView">Введите pin:</string>
    <string name="app_enterPinNum1">1</string>
    <string name="app_enterPinNum2">2</string>
    <string name="app_enterPinNum3">3</string>
    <string name="app_enterPinNum4">4</string>
    <string name="app_enterPinNum5">5</string>
    <string name="app_enterPinNum6">6</string>
    <string name="app_enterPinNum7">7</string>
    <string name="app_enterPinNum8">8</string>
    <string name="app_enterPinNum9">9</string>
    <string name="app_enterPinNum0">0</string>
    <string name="app_enterPinNumBackspaceDescription">backspace</string>
    <string name="app_enterPinCircleDescription">circle</string>
    <string name="app_enterPinError">Введенный pin не верен</string>
    <string name="app_haveNotNotes">Заметок нет</string>
    <string name="app_haveDeadline">Есть дедлайн</string>
    <string name="app_noteTitle">Заголовок</string>
    <string name="app_noteBody">Текст заметки</string>
    <string name="app_noteDeadline">Дата дедлайна</string>
    <string name="app_noteSaved">Заметка сохранена</string>
    <string name="app_calendarButtonDescription">calendar</string>
    <string name="app_deleteDialogTitle">Удалить</string>
    <string name="app_deleteDialogMessage">Вы действительно хотите удалить эту заметку?</string>
    <string name="app_deleteDialogPositiveButton">Удалить</string>
    <string name="app_deleteDialogNegativeButton">Отмена</string>
    <string name="app_newNotesTitle">Новая заметка</string>
    <string name="app_noteDontDeadline">Без крайней даты</string>
    <string name="app_createNoteSuccess">Заметка успешно сохранена</string>
    <string name="app_createNoteDontSuccess">Заметка не сохранена</string>
    <string name="app_settingTitle">Настройки</string>
    <string name="app_notesTitle">Список заметок</string>
    <string name="app_notesAddData">Данные добавлены</string>
    <string name="app_notesAddDataDonOpen">Не удалось открыть данные</string>
    <string name="app_noteDeadlineExample">01011970</string>
    <string name="app_addPinTitle">Создание pin кода</string>
    <string name="app_pinOldTextView">Введите текущий пароль:</string>
    <string name="app_pinEquals">Текущий и новый pin не должны совпадать</string>
    <string name="app_noteEdit">Редактирование заметки</string>
    <string name="app_noteCancel">Отмена</string>
    <string name="app_pinLenError">Длина текущего и нового пароля должна равняться 4 символам</string>
    <string name="app_pinOldEqualsError">Текущий пароль не совпадает</string>
    <string name="app_pinEditTitle">Редактирование pin-кода</string>
    <string name="app_noteEmpty">Поля не заполнены, заметка не была сохранена</string>
</resources>
