<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:mask="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/size_createNoteMarginLayout"
    tools:context=".CreateNoteActivity">

    <EditText
        android:id="@+id/editTextHead"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/app_noteTitle"
        android:inputType="textMultiLine"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextBody"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="top"
        android:hint="@string/app_noteBody"
        android:inputType="textMultiLine"
        android:minLines="7"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextHead" />

    <CheckBox
        android:id="@+id/checkBoxHasDeadLine"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_haveDeadline"
        app:layout_constraintStart_toStartOf="@+id/editTextBody"
        app:layout_constraintTop_toBottomOf="@+id/editTextBody" />

    <TextView
        android:id="@+id/textViewDeadline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_noteDeadline"
        app:layout_constraintBottom_toTopOf="@+id/editTextDeadLine"
        app:layout_constraintTop_toBottomOf="@+id/checkBoxHasDeadLine"
        tools:ignore="MissingConstraints" />

    <br.com.sapereaude.maskedEditText.MaskedEditText
        android:id="@+id/editTextDeadLine"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/size_createNoteEditTextMarginEnd"
        android:inputType="date"
        app:keep_hint="false"
        app:layout_constraintBottom_toBottomOf="@id/btnSelectDeadLine"
        app:layout_constraintEnd_toStartOf="@id/btnSelectDeadLine"
        app:layout_constraintStart_toStartOf="@+id/textViewDeadline"
        mask:allowed_chars="1234567890"
        mask:mask="##.##.####" />

    <ImageButton
        android:id="@+id/btnSelectDeadLine"
        android:layout_width="@dimen/size_createNoteImageButtonWeight"
        android:layout_height="@dimen/size_createNoteImageButtonHeight"
        android:background="@color/colorMyBackground"
        android:contentDescription="@string/app_calendarButtonDescription"
        android:src="@drawable/ic_calendar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/checkBoxHasDeadLine" />

</androidx.constraintlayout.widget.ConstraintLayout>